# zeboar

./: .gitignore  README.md
app/: build.sh  directory.txt  dirtree.py  edit_image_form.py  leaf_screen_generic.py  leaves.py  main.py  navigation_drawer.py  pyproject.toml  store.py  zebra.ini  zebralist.py
server/: noxfile.py  pyproject.toml
server/src/imgproc/: main.py
server/src/zebraapi/: create_db.py  database.py  main.py  models.py
server/tests/: test_main.py
